fixed the msg overflow

--- a/static/styles/chat.css
+++ b/static/styles/chat.css
@@ -118,6 +118,8 @@
     border-color: rgb(52, 89, 114);
     border-width: 0.5px;
     border-style: solid;
+    word-wrap: break-word;
+    padding-right: 1em;
 }
 
 .my-msg {
@@ -131,6 +133,8 @@
     border-color: rgb(101, 102, 40);
     border-width: 0.5px;
     border-style: solid;
+    word-wrap: break-word;
+    padding-right: 1em;
 }
 
 .system-msg {
